[tool.poetry]
name = "Pushl"
version = "0.3.4"
description = "A conduit for pushing changes in a feed to the rest of the IndieWeb"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PlaidWeb/Pushl"
homepage = "https://plaidweb.site/"

[tool.poetry.dependencies]
python = "^3.7.2"
aiohttp = "^3.8.1"
async-lru = "^1.0.3"
awesome-slugify = "^1.6.5"
beautifulsoup4 = "^4.11.1"
feedparser = "^6.0.10"
lxml = "^4.9.1"
mf2py = "^1.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.15.0"
types-python-slugify = "^6.1.0"

[tool.poetry.scripts]
pushl = 'pushl.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
