[tool.poetry]
name = "Pushl"
version = "0.4.0"
description = "A conduit for pushing changes in a feed to the rest of the IndieWeb"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PlaidWeb/Pushl"
homepage = "https://plaidweb.site/"

[tool.poetry.dependencies]
python = "^3.10.0"
aiohttp = "^3.9.1"
async-lru = "^1.0.3"
awesome-slugify = "^1.6.5"
beautifulsoup4 = "^4.11.1"
feedparser = "^6.0.10"
mf2py = "^1.1.2"

[tool.poetry.scripts]
pushl = 'pushl.__main__:main'

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.14.1"
pylint = "^3.3.3"
types-python-slugify = "^8.0.2.20240310"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
