[tool.poetry]
name = "Pushl"
version = "0.4.1"
description = "A conduit for pushing changes in a feed to the rest of the IndieWeb"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PlaidWeb/Pushl"
homepage = "https://plaidweb.site/"

[tool.poetry.dependencies]
python = "^3.10.0"
aiohttp = "^3.13.3"
async-lru = "^2.0.5"
awesome-slugify = "^1.6.5"
beautifulsoup4 = "^4.14.3"
feedparser = "^6.0.12"
mf2py = "^2.0.1"

[tool.poetry.scripts]
pushl = 'pushl.__main__:main'

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.14.1"
pylint = "^4.0.4"
types-python-slugify = "^8.0.2.20240310"
types-beautifulsoup4 = "^4.12.0.20250516"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
